--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
   <div class="container">
     <div class="first-container">
       <p class="main-heading">Metric / Imperial Unit Convertion</p>
-      <input type="text" id="textInput" oninput="getValue()">
+      <input type="text" id="textInput" oninput="getValue()" placeholder="0">
     </div>
     <div class="second-container">
       <div class="length-div">
         <p class="heading">Length (Meter / Feet)</p>
-        <p id="length-values" class="values"></p>
+        <p id="length-values" class="values">
+          0 meters = 0.00 feet | 0 feet = 0.00 meters
+        </p>
       </div>
       <div class="volume-div div">
         <p class="heading">Volume (Liters / Gallons)</p>
-        <p id="volume-values" class="values"></p>
+        <p id="volume-values" class="values">
+          0 meters = 0.00 feet | 0 feet = 0.00 meters
+        </p>
       </div>
       <div class="mass-div div">
         <p class="heading">Mass (Kilograms / Pounds)</p>
-        <p id="mass-values" class="values"></p>
+        <p id="mass-values" class="values">
+          0 meters = 0.00 feet | 0 feet = 0.00 meters
+        </p>
       </div>
     </div>
   </div>
